--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,3 +3,9 @@ controllers:
         path: ../src/Controller/
         namespace: App\Controller
     type: attribute
+
+c:
+    path: /products
+    # the controller value has the format 'controller_class::method_name'
+    controller: App\Controller\ProductController::list
+    methods:    GET
